--- a/SpaDay/Views/Spa/Menu.cshtml
+++ b/SpaDay/Views/Spa/Menu.cshtml
@@ -9,18 +9,46 @@
 </div>
 
 <h1>Fancy Spa</h1>
-<div id="clientProfile">
-</div>
-<div id="servicesMenu">
 
+<div id="clientProfile">
+    @*Add h3 that says Client Profile 
+      and display name from the ViewBag property in a p tag*@
+    <h3>Client Profile</h3>
+    <p>@ViewBag.name</p>
+</div>
+
+<div id="servicesMenu">
     <h5>Facial Treatments</h5>
-    <p>Your //TODO: pass the skintype value in here// skin type is best suited to the follow facial types:</p>
-    
+    @*Pass in skintype variable*@
+    <p>Your @ViewBag.skintype skin type is best suited to the follow facial types:</p>
     <ul>
-        //TODO: iterate through appropriate facial treatments
+        @*Iteratively add the values in appropriateFacials to an unordered list*@
+        @foreach (string facials in ViewBag.appropriateFacials)
+        {
+            <li>@facials</li>
+        }
     </ul>
 
     <h5>Nail Services</h5>
-    // TODO: display a description for the nail service selected
-    
+    @*Add conditional to display different nail service descriptions*@
+    @if(ViewBag.manipedi == "manicure")
+    {
+        <p>Our manicure is a great way to spend 30 minutes of your day! We use shea butter hand cream and the finest gel polish.</p>
+    }
+    else if(ViewBag.manipedi == "pedicure")
+    {
+        <p>Relax for 45 minutes in pure luxury! Our massage chairs and experienced nail techs are here to get your feet in shape for sandal season!</p>
+    }
+</div> 
+
+<div class="nail-colors">
+    <div class="color-block">
+        <div style="background-color: darkolivegreen"></div>
+        <div style="background-color: darkorange"></div>
+        <div style="background-color: tan"></div>
+        <div style="background-color: maroon"></div>
+        <div style="background-color: saddlebrown"></div>
+    </div>
 </div>
+
+
