--- a/SpaDay/wwwroot/css/site.css
+++ b/SpaDay/wwwroot/css/site.css
@@ -1,6 +1,15 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.nail-colors {
+    flex-direction: row;
+}
+
+.color-block {
+    width: 120px;
+    height: 120px;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -69,3 +78,5 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
