--- a/SpaDay/wwwroot/css/site.css
+++ b/SpaDay/wwwroot/css/site.css
@@ -1,13 +1,12 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-.nail-colors {
-    flex-direction: row;
-}
 
 .color-block {
-    width: 120px;
-    height: 120px;
+    width: 75px;
+    height: 75px;
+    display: inline;
+    border-radius: 5px;
 }
 
 a.navbar-brand {
