--- a/SpaDay/Views/User/Index.cshtml
+++ b/SpaDay/Views/User/Index.cshtml
@@ -6,4 +6,4 @@
 <a asp-controller="Spa" asp-action="Index">Spa</a>
 <a asp-controller="User" asp-action="Add">Add User</a>
 
-<h1>Welcome @ViewBag.Name!</h1>
+<h1>Welcome, @ViewBag.username!</h1>
