--- a/SpaDay/Views/User/Index.cshtml
+++ b/SpaDay/Views/User/Index.cshtml
@@ -1,9 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<a asp-controller="Spa" asp-action="Index">Spa</a>
-<a asp-controller="User" asp-action="Add">Add User</a>
+﻿@*Add newUser's Username property and link to Spa*@
+<h1>Welcome, @ViewBag.newUser.Username!</h1>
 
-<h1>Welcome, @ViewBag.username!</h1>
+<a asp-controller="Spa" asp-action="Index">Spa</a>
