--- a/SpaDay/Views/User/Add.cshtml
+++ b/SpaDay/Views/User/Add.cshtml
@@ -11,25 +11,25 @@
 <div class="form-group">
    <label asp-for="UserName">Username:</label>
    <input asp-for="UserName" />
-   <span asp-validation-for="UserName"></span>
+   <span class="field-validation-error" asp-validation-for="UserName"></span>
 </div>
 
 <div class="form-group">
    <label asp-for="Email">Email:</label>
    <input type="email" asp-for="Email" />
-   <span asp-validation-for="Email"></span>
+   <span class="field-validation-error" asp-validation-for="Email"></span>
 </div>
 
 <div class="form-group">
    <label asp-for="Password">Password:</label>
    <input type="password" asp-for="Password" />
-   <span asp-validation-for="Password"></span>
+   <span class="field-validation-error" asp-validation-for="Password"></span>
 </div>
 
 <div class="form-group">
    <label asp-for="VerifyPassword">Verify Password:</label>
    <input type="password" asp-for="VerifyPassword" />
-   <span asp-validation-for="VerifyPassword"></span>
+   <span class="field-validation-error" asp-validation-for="VerifyPassword"></span>
 </div>
 
 <input type="submit" value="Submit" />
